kubernetes/tracing/jaeger.yaml
---
apiVersion: v1
kind: Namespace
metadata:
    name: jaeger
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger-deployment
  namespace: jaeger
  labels:
    app: jaeger
    jaeger-infra: jaeger-deployment
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jaeger
      jaeger-infra: jaeger-pod
  template:
    metadata:
      labels:
        app: jaeger
        jaeger-infra: jaeger-pod
    spec:
        containers:
        - name: jaeger
          image: jaegertracing/all-in-one
          ports:
            - containerPort: 5775
              protocol: UDP
            - containerPort: 6831
              protocol: UDP
            - containerPort: 6832
              protocol: UDP
            - containerPort: 16686
              protocol: TCP
            - containerPort: 9411
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 100Mi
          readinessProbe:
            httpGet:
              path: "/"
              port: 16686
            initialDelaySeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger-collector
  namespace: jaeger
  labels:
    app: jaeger
    jaeger-infra: collector-service
spec:
  ports:
  - name: jaeger-collector-tchannel
    port: 14267
    protocol: TCP
    targetPort: 14267
  - name: jaeger-collector-http
    port: 14268
    protocol: TCP
    targetPort: 14268
  - name: jaeger-collector-zipkin
    port: 9411
    protocol: TCP
    targetPort: 9411
  selector:
    jaeger-infra: jaeger-pod
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger-agent
  namespace: jaeger
  labels:
    app: jaeger
    jaeger-infra: agent-service
spec:
  ports:
  - name: agent-zipkin-thrift
    port: 5775
    protocol: UDP
    targetPort: 5775
  - name: agent-compact
    port: 6831
    protocol: UDP
    targetPort: 6831
  - name: agent-binary
    port: 6832
    protocol: UDP
    targetPort: 6832
  clusterIP: None
  selector:
    jaeger-infra: jaeger-pod
---
apiVersion: v1
kind: Service
metadata:
  name: zipkin
  namespace: jaeger
  labels:
    app: jaeger
    jaeger-infra: zipkin-service
spec:
  ports:
  - name: jaeger-collector-zipkin
    port: 9411
    protocol: TCP
    targetPort: 9411
  clusterIP: None
  selector:
    jaeger-infra: jaeger-pod
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger-query
  namespace: jaeger
  labels:
    app: jaeger
    jaeger-infra: jaeger-service
spec:
  ports:
    - name: query-http
      port: 80
      protocol: TCP
      targetPort: 16686
  selector:
    jaeger-infra: jaeger-pod
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jaeger-query
  labels:
    app: jaeger
    jaeger-infra: jaeger-service
  namespace: jaeger
spec:
  rules:
  - host: jaeger-query.local
    http:
      paths:
      - path: /
        backend:
          serviceName: jaeger-query
          servicePort: 80
